# trident-demo

./: .env.example  .env.external.example  .gitignore  IDF_Invention Disclosure_PATENT_2026.docx  IDF_Invention Disclosure_PATENT_2026_FILLED.docx  IDF_Invention Disclosure_PATENT_2026_FILLED_v2.docx  IDF_Invention Disclosure_PATENT_2026_FILLED_v3.docx  IDF_Invention Disclosure_PATENT_2026_FILLED_v4.docx  PLAN.md  README.md  docker-compose.external.yml  docker-compose.yml  trident_patent_figures.drawio  trident_spec.docx  ~$F_Invention Disclosure_PATENT_2026_FILLED_v4.docx
backend/: Dockerfile  config.py  dependencies.py  main.py  models.py  pyproject.toml
backend/agent/: graph.py  memory.py  task_graph.py  task_tools.py  tools.py
backend/ingestion/: chunker.py  dspy_programs.py  extractor.py  parsers.py  pipeline.py  resolver.py  web_fetcher.py
backend/llm/: embeddings.py  provider.py
backend/query/: engine.py
backend/routers/: agent.py  health.py  ingest.py  providers.py  query.py  task_agent.py
backend/stores/: graph.py  graph_constants.py  graph_index.py  knowledge.py  procedural.py
backend/tests/: test_chunker.py  test_config.py  test_dspy_programs.py  test_embeddings.py  test_extractor.py  test_models.py  test_parsers.py  test_stores.py
docs/: agent-apis.md  api-reference.md  architecture.md  async-ui.md  deployment.md  frontend.md  generate_roadmap_docx.py  getting-started.md  ingestion-pipeline.md  llm-providers.md  models.md  providers.md  roadmap.md  stores.md  trident-roadmap.docx
frontend/: Dockerfile  index.html  package-lock.json  (+2 more)
(+44 files in other folders)
