[project]
name = "trident-backend"
version = "0.1.0"
description = "Trident Context Substrate Layer — Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "sse-starlette>=2.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "dspy>=2.5",
    "neo4j>=5.18",
    "pymilvus>=2.4",
    "docling>=2.0",
    "docling-core[chunking-openai]>=2.0",
    "httpx>=0.27",
    "tenacity>=8.3",
    "openai>=1.30",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
